* bug:MID-10204[] Fix error during preview of changes.
* bug:MID-10319[] Fixed incorrect error message displayed when performing "Unlock" action on user list page.
* bug:MID-10317[] Fixed missing message when user disable fails.
* bug:MID-10320[] Fixed ninja zip option used during export/import.
* bug:MID-10218[] Task execution constraints added to advanced options tab.

=== Other Improvements

* Update GUI views after changing of the archetype, that is used in the view. See bug:MID-9776[].
* Adding support for PKCE (Proof Key for Code Exchange) as additional security for OIDC authentication module. See bug:MID-10155[].
* Adding new configuration attribute for OIDC authentication module, that is used for ID Token signing algorithm. See xref:/midpoint/reference/security/authentication/flexible-authentication/modules/oidc/[Oidc Module].
* Password caching has been implemented. See xref:/midpoint/reference/resources/attribute-caching/[].
* Apply the Web Content Accessibility Guidelines (WCAG) to all login pages and self-service pages. See bug:MID-9847[].
** Used 'honeypot' instead of captcha on self-registration and post-authentication pages to protect against spam bots.

=== Releases Of Other Components

* New version (1.5.2.0) of xref:/connectors/connectors/org.identityconnectors.databasetable.DatabaseTableConnector/[DatabaseTable Connector] was released and bundled with midPoint. The connector suggest all names of columns for configuration properties related with name of column.

* New version (2.8) of xref:/connectors/connectors/com.evolveum.polygon.connector.csv.CsvConnector/[CSV Connector] was released and bundled with midPoint. The connector suggest all names of columns for configuration properties related with name of column.
** Fixed NPE with multivalue attributes when delimiter is not defined. (bug:MID-8609[]).
** Fix UTF-8 BOM character in csv file during of discovery functions. (bug:MID-9497[] and bug:MID-9498[]).
